--- a/Samples/BeanTrader/NetCore/BeanTraderClient/BeanTraderClient.Core.csproj
+++ b/Samples/BeanTrader/NetCore/BeanTraderClient/BeanTraderClient.Core.csproj
@@ -52,14 +52,6 @@
     <PackageReference Include="Nito.AsyncEx">
       <Version>5.0.0-pre-05</Version>
     </PackageReference>
-
-    <!-- WCF packages are included in the Microsoft.Windows.Compatibility package
-         If you don't want to include the entire compatibility pack (though including
-         it is generally recommended), it's also possible to reference specific .NET
-         packages needed by the app.
-    <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.3" />
-    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.3" />
-    <PackageReference Include="System.ServiceModel.Security" Version="4.5.3" />
-    -->
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
   </ItemGroup>
 </Project>
