Update sample to use local server (instead of an Azure-hosted one)

--- a/Samples/BeanTrader/NetCore/BeanTraderClient/App.config
+++ b/Samples/BeanTrader/NetCore/BeanTraderClient/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="DefaultTheme" value="Default" />
     <add key="BeanTraderEndpointConfiguration" value="NetTcpBinding_BeanTraderService" />
-    <add key="BeanTraderEndpointAddress" value="net.tcp://beantrader.eastus.cloudapp.azure.com:8090/BeanTraderService"/>
+    <add key="BeanTraderEndpointAddress" value="net.tcp://localhost:8090/BeanTraderService"/>
   </appSettings>
 
 </configuration>
