--- a/Samples/BeanTrader/NetFx/BeanTraderClient/App.config
+++ b/Samples/BeanTrader/NetFx/BeanTraderClient/App.config
@@ -16,7 +16,7 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="net.tcp://beantrader.eastus.cloudapp.azure.com:8090/BeanTraderService"
+      <endpoint address="net.tcp://localhost:8090/BeanTraderService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_BeanTraderService"
           contract="BeanTraderService" name="NetTcpBinding_BeanTraderService">
         <identity>
