--- a/Samples/BeanTrader/NetFx/BeanTraderClient/App.config
+++ b/Samples/BeanTrader/NetFx/BeanTraderClient/App.config
@@ -2,18 +2,12 @@
 <configuration>
   <appSettings>
     <add key="DefaultTheme" value="Default" />
-
-    <!-- This is, of course, only for demo purposes. Don't really submit Azure credentials to source control! -->
-    <add key="AzureAppId" value="6761cb54-6c38-4f68-8491-401fe98c073f" />
-    <add key="AzureAppPassword" value="1526fc7b-2043-4bf0-8508-e6c8dcd59509" />
-    <add key="AzureTenant" value="72f988bf-86f1-41af-91ab-2d7cd011db47" />
-    <add key="CertificateSecretIdentifier" value="https://beantrader.vault.azure.net/secrets/BeanTrader/01d34a5ca02d4d37971fe9c61b6cbc5f" />
   </appSettings>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
         <binding name="NetTcpBinding_BeanTraderService">
-          <!-- Was going to use TransportWithMessageCredential security, but 
+          <!-- Was going to use TransportWithMessageCredential security, but
                that is not yet supported on .NET Core. https://github.com/dotnet/wcf/issues/8 -->
           <security mode="Transport">
             <transport clientCredentialType="Certificate" />
@@ -22,7 +16,7 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="net.tcp://beantrader.eastus.cloudapp.azure.com:8090/BeanTraderService"
+      <endpoint address="net.tcp://localhost:8090/BeanTraderService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_BeanTraderService"
           contract="BeanTraderService" name="NetTcpBinding_BeanTraderService">
         <identity>
