Enable WSDL endpoint

--- a/Samples/BeanTrader/NetCore/BeanTraderServer/wcf.config
+++ b/Samples/BeanTrader/NetCore/BeanTraderServer/wcf.config
@@ -3,14 +3,14 @@
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="beanTraderBehaviour">
+        <behavior name="beanTraderBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service name="BeanTraderServer.BeanTrader" behaviorConfiguration="beanTraderBehaviour">
+      <service name="BeanTraderServer.BeanTrader" behaviorConfiguration="beanTraderBehavior">
         <endpoint address="BeanTraderService" binding="netTcpBinding" bindingConfiguration="WindowsClient" contract="BeanTrader.IBeanTrader"></endpoint>
       </service>
     </services>
